--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".mainactivity.MainActivity"
     tools:layout="@layout/fragment_my_drugs"
+    android:animateLayoutChanges="true"
     tools:showIn="@layout/app_bar_main">
 
 </FrameLayout>
