--- a/app/src/main/res/layout/fragment_scan_barcode.xml
+++ b/app/src/main/res/layout/fragment_scan_barcode.xml
@@ -20,26 +20,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:reticle_color="@android:color/holo_green_light"
+        app:reticle_color="@color/colorAccent"
         app:reticle_fraction="0.5"
-        app:use_flash="true" />
-
-    <TextView
-        android:id="@+id/textview_background"
-        style="@style/Base.Theme.MaterialComponents.BackgroundText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/type_drug_or_substance_first"
-        android:typeface="normal"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:use_flash="false" />
 
     <com.iitr.kaishu.nsidedprogressbar.NSidedProgressBar
         android:id="@+id/progress_indicator"
@@ -50,7 +33,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
